--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <service android:name=".service.CtrlService" />
+
         <activity
             android:label="@string/app_name"
             android:name=".ClientActivity" >
