--- a/client/.classpath
+++ b/client/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="./lib/media.jar"/>
+	<classpathentry kind="lib" path="./lib/fakecamera.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
