--- a/circularbuffer/.classpath
+++ b/circularbuffer/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/client/lib/fakecamera.jar"/>
+	<classpathentry kind="lib" path="/client/lib/media.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
