--- a/client/.classpath
+++ b/client/.classpath
@@ -4,7 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="./lib/media.jar"/>
-	<classpathentry kind="lib" path="./lib/fakecamera.jar"/>
+	<classpathentry kind="lib" path="lib/media.jar"/>
+	<classpathentry kind="lib" path="lib/fakecamera.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/server"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
