--- a/circularbuffer/.classpath
+++ b/circularbuffer/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/client/lib/fakecamera.jar"/>
 	<classpathentry kind="lib" path="/client/lib/media.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/server"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
