send/recv-thread editing both ends

--- a/server/.classpath
+++ b/server/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="./lib/media.jar"/>
-	<classpathentry kind="lib" path="./lib/fakecamera.jar"/>
+	<classpathentry kind="lib" path="lib/media.jar"/>
+	<classpathentry kind="lib" path="lib/fakecamera.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/circularbuffer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
