--- a/circularbuffer/.project
+++ b/circularbuffer/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>server_src</name>
+			<type>2</type>
+			<location>/Users/jg/workspace/eda040_project/AxisAndAndroids/server/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
