--- a/server/.classpath
+++ b/server/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/media.jar"/>
 	<classpathentry kind="lib" path="lib/fakecamera.jar"/>
+	<classpathentry kind="lib" path="lib/cameraproxy.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
