--- a/desktop-client/.classpath
+++ b/desktop-client/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="../server/lib/cameraproxy.jar"/>
-	<classpathentry kind="lib" path="../server/lib/fakecamera.jar"/>
-	<classpathentry kind="lib" path="../server/lib/media.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/client"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/server"/>
+	<classpathentry exported="true" kind="lib" path="../server/lib/cameraproxy.jar"/>
+	<classpathentry exported="true" kind="lib" path="../server/lib/fakecamera.jar"/>
+	<classpathentry exported="true" kind="lib" path="../server/lib/media.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/client"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/server"/>
+	<classpathentry exported="true" kind="lib" path="/Users/jg/workspace/eda040_project/AxisAndAndroids/desktop-client/lib/OSXAdapter.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
